--- a/style.css
+++ b/style.css
@@ -4,3 +4,8 @@
 body{
     background-color:darkolivegreen;
 }
+hearder{
+    display: flex;
+    justify-content: space-around;
+    align-items: center 
+        }
