--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 
 }
 body{
-    background-color:rgb(43, 58, 18);
+    background:linear-gradient(left, blue,green, yellow);
 }
 hearder{
+    background-color:rgb(43, 58, 18) ;
     display: flex;
     justify-content: space-around;
     align-items: center 
