--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 }
 body{
-    background:linear-gradient(left, blue,green, yellow);
+    background:linear-gradient(top, blue,green, yellow);
 }
 hearder{
     background-color:rgb(43, 58, 18) ;
