--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
 }
 hearder{
     background-color:rgb(43, 58, 18);
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center 
