--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body{
 }
 hearder{
     background-color:rgb(83, 104, 50);
-    padding-left: 100px;
-    padding-right: 100px;
+    padding: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center 
