--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 }
 hearder{
     background-color:rgb(83, 104, 50);
-    padding: 100%;
+    padding-left: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center 
