--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body{
     background:linear-gradient(90deg, rgb(55, 91, 92),rgb(204, 204, 42));
 }
 hearder{
-    min-height: 150px;
+    padding-right: 40px;
+    padding-left: 40px;
     background-color:rgb(83, 104, 50);
     padding-top:40px;
     align-items: center 
-    
         }
  hearder > h1{
     color:black ;
