--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body{
     background:linear-gradient(90deg, rgb(55, 91, 92),rgb(204, 204, 42));
 }
 hearder{
+    display: flex;
+    justify-content: space-around;
     background-color:rgb(83, 104, 50);
     padding-top:40px;
     align-items: center 
