--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
 
 }
 body{
-    background:linear-gradient(90deg, rgb(55, 91, 92),rgb(204, 204, 42));
+    background:linear-gradient(top, rgb(55, 91, 92),rgb(204, 204, 42));
 }
 hearder{
     margin-right: -8px;
     margin-left: -10px;
+    margin-top: -10px;
     position: sticky;
     top: 0;
     display: flex;
