--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 }
 body{
-    background:linear-gradient(80deg,blue,yellow)
+    background:linear-gradient(80deg,rgb(216, 201, 63),rgb(181, 226, 138))
 }
 hearder{ 
     
