--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
     background-color: white;
 }
 hearder{ 
+    margin-right: -8px;
+    margin-left: -10px;
+    margin-top: -10px;
     background-color: darkblue;
     display: flex;
     justify-content: space-around;
