--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ hearder{
     margin-right: -8px;
     margin-left: -10px;
     margin-top: -10px;
-    background-color: darkblue;
+    background: linear-gradient(darkblue, blue
+    );
     display: flex;
     justify-content: space-around;
     align-items: center 
