--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ hearder{
     margin-right: -8px;
     margin-left: -10px;
     margin-top: -10px;
-    background: linear-gradient(darkblue, blue
+    background: linear-gradient(darkblue, blue);
     );
     display: flex;
     justify-content: space-around;
