--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ hearder{
     margin-right: -8px;
     margin-left: -10px;
     margin-top: -10px;
-    background: linear-gradient(darkblue,blue);
+    background: linear-gradient(darkblue,rgb(143, 49, 49));
     display: flex;
     justify-content: space-around;
     align-items: center 
