--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body > h2{
     color: black;
     font-size: 7em;
  }
-hearder{ 
+header{ 
     margin-right: -8px;
     margin-left: -10px;
     margin-top: -10px;
