--- a/style.css
+++ b/style.css
@@ -13,12 +13,12 @@ header{
     margin-left: -10px;
     margin-top: -10px;
     display:flex;
-    background-color:darkblue;
+    background: linear-gradient(darkblue,blue);
     display: flex;
     justify-content: space-around;
     align-items: center 
         }
- hearder > h1{
+ header > h1{
     color:rgb(255, 255, 255) ;
     font-size: 3em;
     margin-bottom: 30px;
