--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 }
 body{
-    background-color: rgb(37, 141, 77);
-}
+    background: linear-gradient(rgb(37, 141, 77),rgb(12, 170, 12))
+
 body > h2{
     color: black;
     font-size: 7em;
