--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 }
 body{
-    background-color: rgb(10, 119, 6);
-
+    background: linear-gradient(rgb(37, 141, 77),green);
+}
 body > h2{
     color: black;
     font-size: 7em;
