--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 }
 body{
-    background: linear-gradient(darkblue,blue);
+    background: linear-gradient(gray);
 }
 body > h2{
     color: black;
