--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ header{
  
  /* menu appearance*/
  #menu {
+   float: right;
    position: relative;
    color: #999;
    width: 200px;
@@ -134,3 +135,4 @@ header{
  /* demo styles */
  body { margin-top: 3em; background: #eee; color: #555; font-family: "Open Sans", "Segoe UI", Helvetica, Arial, sans-serif; }
  p, p a { font-size: 12px;text-align: center; color: #888; }
+ 
