--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-
+ margin 0;
 }
 body{
     background-color:rgb(233, 247, 158);
@@ -8,7 +8,9 @@ body > h2{
     color: black;
     font-size: 7em;
  }
-header{ 
+header{  
+  position: relative;
+   padding: 12px;
     margin-right: -8px;
     margin-left: -10px;
     margin-top: -10px;
@@ -35,4 +37,32 @@ header{
    -webkit-font-smoothing: antialiased;
    margin: 0;
    background: #f5f5f5;
+ }
+ ul li{
+  list.style: none;
+ }
+ .texto{
+  color: #f5f5f5;
+ }
+ a{
+  color: #f5f5f5;
+  text-decoration: none;
+ }
+ .lista{
+  display: none;
+  position: absolute;
+  top: 100%;
+  background-color: brown;
+  width: 100%;
+  padding: 20px 0;
+  text-align: center;
+ }
+ .caixa:checked ~ .lista{
+  display: none;
+ }
+ #menu{
+  display: none;
+ }
+ .item-da-lista{
+  padding: 12px 0;
  }
