--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 *{
  margin 0;
+ padding: 0;
+ box-sizing: border-box;
 }
 body{
     background-color:rgb(233, 247, 158);
@@ -32,37 +34,30 @@ header{
     color: black;
     font-size: 2em;
  }
- body {
-   font-family: Lato;
-   -webkit-font-smoothing: antialiased;
-   margin: 0;
-   background: #f5f5f5;
- }
- ul li{
-  list.style: none;
- }
- .texto{
-  color: #f5f5f5;
- }
- a{
-  color: #f5f5f5;
-  text-decoration: none;
- }
- .lista{
-  display: none;
-  position: absolute;
-  top: 100%;
-  background-color: brown;
-  width: 100%;
-  padding: 20px 0;
-  text-align: center;
- }
- .caixa:checked ~ .lista{
-  display: none;
- }
- #menu{
-  display: none;
- }
- .item-da-lista{
-  padding: 12px 0;
- }
+ nav {
+   background-color: #333;
+   color: #fff;
+   text-align: center;
+}
+
+nav ul {
+   list-style-type: none;
+   padding: 0;
+}
+
+nav ul li {
+   display: inline;
+   margin-right: 20px;
+}
+
+nav ul li a {
+   color: #fff;
+   text-decoration: none;
+   font-size: 18px;
+   padding: 10px 15px;
+   transition: background-color 0.3s ease;
+}
+
+nav ul li a:hover {
+   background-color: #555;
+}
