--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
- margin 0;
+ margin: 0;
  padding: 0;
  box-sizing: border-box;
 }
@@ -35,7 +35,7 @@ header{
     font-size: 2em;
  }
  nav {
-   margin-top: 50%;
+   margin-top: 100%;
    
    background-color: #333;
    color: #fff;
