--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header{
     font-size: 2em;
  }
  nav {
-   margin-top: -75%;
+   margin-top: -75px;
    
    background-color: #333;
    color: #fff;
