--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
  }
  nav {
    padding: 10px;
-   background-color: #333;
+   background: linear-gradient(rgb(37, 141, 77),green);
    color: #fff;
    text-align: center;
    
