--- a/style.css
+++ b/style.css
@@ -36,8 +36,7 @@ header{
  }
  nav {
    padding: 10px;
-   background: linear-gradient(rgb(37, 141, 77),green);
-   color: #fff;
+  background-color:(rgb(37, 141, 77);
    text-align: center;
    
 }
