--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
  }
  nav {
    padding: 10px;
-  background-color:(rgb(37, 141, 77);
+  background-color:rgb(37, 141, 77);
    text-align: center;
    
 }
