--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
  }
  nav {
    padding: 10px;
-  background-color:rgb(44, 161, 89);
+  background:linear-gradient(rgb(37, 141, 77),rgb(43, 161, 88));
    text-align: center;
    
 }
