--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
  }
  nav {
    padding: 10px;
-  background:linear-gradient(rgb(37, 141, 77),rgb(38, 145, 79));
+  background:linear-gradient(rgb(37, 141, 77);
    text-align: center;
    
 }
