--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 body > h2{
     color: black;
     font-size: 7em;
-    align-items: center;
+    text-align: center;
  }
 header{  
   position: relative;
