--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@
 
 }
 body{
+   display: flex;
     background-color:rgb(237, 247, 185);
 }
 body > h2{
     color: black;
     font-size: 5em;
+    display: flex;
  }
 header{  
   position: relative;
@@ -24,16 +26,20 @@ header{
  header > h1{
     color:rgb(255, 255, 255) ;
     font-size: 3em;
+    display: flex;
     margin-bottom: 30px;
  }
  section{
+   display: flex;
     background-color: transparent;
  }
  section > p{
+   display: flex;
     color: black;
     font-size: 2em;
  }
  nav {
+   display: flex;
    padding: 10px;
   background-color: rgb(37, 141, 77);
    text-align: center;
