--- a/style.css
+++ b/style.css
@@ -64,7 +64,9 @@ nav ul li a:hover {
    background-color: #185c23;
 }
 img{
-   align-items: center;
    max-width: 100%;
    height: auto;
+}
+section.batata{
+   align-items: center;
 }
