--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@ img{
    max-width: 100%;
    height: auto;
 }
-#batata{
+section.batata{
    align-items: center;
+   display: flex;
+   background-color: transparent;
 }
