--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header{
     font-size: 2em;
  }
  nav {
+   padding: 10px;
   background-color: rgb(37, 141, 77);
    text-align: center;
    
@@ -43,17 +44,19 @@ header{
 
 nav ul {
    list-style-type: none;
+   padding: 0;
 }
 
 nav ul li {
    display: inline;
-   
+   margin-right: 20px;
 }
 
 nav ul li a {
    color: #fff;
    text-decoration: none;
    font-size: 18px;
+   padding: 10px 15px;
    transition: background-color 0.3s ease;
 }
 
