--- a/style.css
+++ b/style.css
@@ -77,3 +77,12 @@ img{
 section.potato > p{
    font-size: 2em;
 }
+body.carrot {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   height: 100vh;
+   margin: 0;
+   font-family: Arial, sans-serif;
+}
