--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ img{
 section.potato > p{
    font-size: 2em;
 }
-body.carrot {
+section.carrot {
    display: flex;
    flex-direction: column;
    align-items: center;
