--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ section.potato > p{
 }
 section.carrot {
    display: flex;
-   flex-direction: column;
+   flex-direction:row;
    align-items: center;
    justify-content: center;
 }
