--- a/style.css
+++ b/style.css
@@ -90,6 +90,11 @@ section.carrot {
    flex-direction:row;
    align-items: center;
    justify-content: center;
+   div{
+    width: 300px;
+    height: 150px;
+   }
+
 }
 .silver {
    border-left: 2px solid transparent; 
