--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ section.carrot {
    flex-direction:row;
    align-items: center;
    justify-content: center;
-   div{
+   div.nikka{
     width: 300px;
     height: 150px;
    }
