--- a/style.css
+++ b/style.css
@@ -91,6 +91,8 @@ section.carrot {
    align-items: center;
    justify-content: center;
    div.nikka{
+      display: flex;
+      align-items: center;
     width: 300px;
     height: 150px;
    }
