--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ section.carrot {
    align-items: center;
    justify-content: center;
    div.nikka{
-      
+      padding: 10px 15px;
     width: 300px;
     height: 150px;
    }
