--- a/style.css
+++ b/style.css
@@ -87,15 +87,9 @@ section.potato > p{
 }
 section.carrot {
    display: flex;
-   
+   flex-direction: column;
    align-items: center;
    justify-content: center;
-   div.nikka{
-      padding: 10px 15px;
-    width: 300px;
-    height: 150px;
-   }
-
 }
 .silver {
    border-left: 2px solid transparent; 
