--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ nav ul li a:hover {
 img{
    max-width: 100%;
    height: auto;
+   border-radius: 10px;
 }
 section.potato > p{
    font-size: 1em;
