--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ img{
    max-width: 100%;
    height: auto;
    border-radius: 10px;
+   border: #185c23;
 }
 section.potato > p{
    font-size: 1em;
