--- a/style.css
+++ b/style.css
@@ -99,7 +99,9 @@ section.carrot {
    margin: 0 20px;}
 
    footer{
+      .a{
          color: rgb(0, 0, 0);
+      }
          background-color: #185f1b;
          display: flex;
          justify-content: space-around;
