--- a/style.css
+++ b/style.css
@@ -99,9 +99,8 @@ section.carrot {
    margin: 0 20px;}
 
    footer{
-      .a{
+      
          color: rgb(0, 0, 0);
-      }
          background-color: #185f1b;
          display: flex;
          justify-content: space-around;
@@ -110,3 +109,6 @@ section.carrot {
          border: #95a9af;
        
    }
+      a{
+         color: black;
+      }
