--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ section.carrot {
 
    footer{
       
-         color: black;
+         color: rgb(0, 0, 0);
          background-color: #185f1b;
          display: flex;
          justify-content: space-around;
@@ -109,3 +109,6 @@ section.carrot {
          border: #95a9af;
        
    }
+      a{
+         color: black;
+      }
