--- a/style.css
+++ b/style.css
@@ -110,4 +110,5 @@ section.carrot {
       a{
          text-decoration: dotted;
          color: rgb(255, 255, 255);
+         font-size: 1em;
       }
