--- a/style.css
+++ b/style.css
@@ -116,4 +116,13 @@ section.carrot {
          font-size: 1.5em;
    
       }
-   
+      .gradient {
+         background-image: linear-gradient(to bottom, rebeccapurple, steelblue, turquoise);
+         color: rgb(255, 255, 255);
+       }
+       
+       p {
+         font-size: 3rem;
+         font-weight: bold;
+         line-height: 1.1;
+       }
