--- a/style.css
+++ b/style.css
@@ -116,11 +116,14 @@ section.carrot {
          font-size: 1.5em;
    
       }
+   
       .gradient {
          background-image: linear-gradient(to bottom, rebeccapurple, steelblue, turquoise);
-         color: rgb(255, 255, 255);
+         background-clip: text;
+         -webkit-background-clip: text;          
+      -webkit-text-fill-color: transparent;
+         color: black;  
        }
-       
        p {
          font-size: 3rem;
          font-weight: bold;
