--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
  padding: 0;
  box-sizing: border-box;
 }
+@media (max-width: 600px) {
+   body {
+       font-size: 14px; /* Reduz o tamanho da fonte em telas menores */
+   }
+}
 .root{
 
 }
