--- a/style.css
+++ b/style.css
@@ -5,26 +5,23 @@
    box-sizing: border-box;
 }
 
-
 body {
    background-color: rgb(237, 247, 185);
    font-family: 'Roboto', sans-serif;
    line-height: 1.6;
 }
 
-
+/* Ajustes responsivos para o corpo */
 @media (max-width: 600px) {
    body {
        font-size: 14px;
    }
 }
 
-
 .container {
    width: 80%;
    padding: 2rem;
 }
-
 
 header {
    position: relative;
@@ -33,37 +30,36 @@ header {
    align-items: center;
    text-align: center;
    background: linear-gradient(rgb(37, 141, 77), green);
-   padding: 20px; 
+   padding: 20px;
 }
 
 header > h1 {
    color: rgb(255, 255, 255);
    font-size: clamp(2rem, 5vw, 3em);
-   margin: 0; 
-
+   margin: 0;
+}
 
 body > h2 {
    color: black;
    font-size: clamp(2rem, 8vw, 5em);
    text-align: center;
-   margin: 20px 0; 
+   margin: 20px 0;
 }
-
 
 section {
    background-color: transparent;
    display: flex;
    text-align: center;
-   flex-direction: column; 
-   margin: 20px 0; 
+   flex-direction: column;
+   margin: 20px 0;
+}
 
 section.onion > p,
 section.potato > p {
    color: black;
-   font-size: clamp(1.5rem, 3vw, 2em); 
+   font-size: clamp(1.5rem, 3vw, 2em);
    font-weight: bold;
 }
-
 
 nav {
    padding: 10px;
@@ -93,23 +89,19 @@ nav ul li a:hover {
    background-color: #185c23;
 }
 
-
 img {
    max-width: 80%; 
    height: auto; 
    border-radius: 10px;
    border: solid 3px #44b156;
-   margin: 0 auto; 
+   margin: 20px auto; /* Margem superior e inferior para melhor espaçamento */
 }
-
 
 @media (max-width: 600px) {
    img {
        max-width: 90%; 
    }
 }
-
-
 
 footer {
    background-color: #185f1b;
@@ -127,7 +119,6 @@ footer a.gradient {
    font-size: clamp(1.5rem, 3vw, 1.5em);
 }
 
-
 .gradient {
    background-image: linear-gradient(to bottom, rgb(51, 255, 0), rgb(251, 255, 0), rgb(0, 17, 255));
    background-clip: text;
@@ -135,10 +126,9 @@ footer a.gradient {
    -webkit-text-fill-color: transparent;
 }
 
-
 p {
    font-size: clamp(1.5rem, 4vw, 3rem);
    font-weight: bold;
    line-height: 1.1;
-   margin: 1rem 0; 
+   margin: 1rem 0;
 }
