--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-   background-color: #f9f9f9; /* Branco neve */
+   background-color: #f5f5dc; /* Bege areia */
    font-family: 'Roboto', sans-serif;
    line-height: 1.6;
 }
@@ -28,7 +28,7 @@ header {
    justify-content: center;
    align-items: center;
    text-align: center;
-   background: linear-gradient(#00796b, #4db6ac); /* Azul petróleo e verde menta */
+   background: linear-gradient(#3b7a57, #76c7c0); /* Verde floresta e azul céu */
    padding: 20px;
 }
 
@@ -39,7 +39,7 @@ header > h1 {
 }
 
 body > h2 {
-   color: #00796b; /* Azul petróleo */
+   color: #3b7a57; /* Verde floresta */
    font-size: clamp(2rem, 8vw, 5em);
    text-align: center;
    margin: 20px 0;
@@ -55,14 +55,14 @@ section {
 
 section.onion > p,
 section.potato > p {
-   color: #4db6ac; /* Verde menta */
+   color: #3b7a57; /* Verde floresta */
    font-size: clamp(1.5rem, 3vw, 2em);
    font-weight: bold;
 }
 
 nav {
    padding: 10px;
-   background-color: #00796b; /* Azul petróleo */
+   background-color: #76c7c0; /* Verde lima */
    text-align: center;
 }
 
@@ -85,14 +85,14 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-   background-color: #004d40; /* Verde escuro */
+   background-color: #2f4f4f; /* Verde escuro */
 }
 
 img {
    max-width: 80%;
    height: auto;
    border-radius: 10px;
-   border: solid 3px #ff7043; /* Coral */
+   border: solid 3px #8b4513; /* Marrom terra */
    margin: 20px auto;
 }
 
@@ -103,7 +103,7 @@ img {
 }
 
 footer {
-   background-color: #4db6ac; /* Verde menta */
+   background-color: #76c7c0; /* Verde lima */
    display: flex;
    justify-content: center;
    align-items: center;
@@ -119,7 +119,7 @@ footer a.gradient {
 }
 
 .gradient {
-   background-image: linear-gradient(to bottom, #ffccbc, #ffab91); /* Tons de coral claros */
+   background-image: linear-gradient(to bottom, #e0f7fa, #b2dfdb); /* Tons de azul e verde claros */
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
