--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
    justify-content: center;
    align-items: center;
    text-align: center;
-   background: linear-gradient(#4a8e4a, #a8d5ba); /* Verde escuro para verde pastel */
+   background: linear-gradient(#3a6f4a, #7cb48a); /* Verde escuro para verde médio */
    padding: 20px;
 }
 
@@ -62,7 +62,7 @@ section.potato > p {
 
 nav {
    padding: 10px;
-   background-color: #4a8e4a; /* Verde escuro */
+   background-color: #3a6f4a; /* Verde escuro */
    text-align: center;
 }
 
@@ -92,7 +92,7 @@ img {
    max-width: 80%; 
    height: auto; 
    border-radius: 10px;
-   border: solid 3px #4a8e4a; /* Verde escuro */
+   border: solid 3px #3a6f4a; /* Verde escuro */
    margin: 20px auto; /* Margem superior e inferior para melhor espaçamento */
 }
 
@@ -119,7 +119,7 @@ footer a.gradient {
 }
 
 .gradient {
-   background-image: linear-gradient(to bottom, #5cd65c, #a8d5ba); /* Verde claro e verde pastel */
+   background-image: linear-gradient(to bottom, #5cd65c, #a4d3a0); /* Verde claro */
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
