--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-   background-color: #e9f7ed; /* Verde muito claro */
+   background-color: rgb(237, 247, 185);
    font-family: 'Roboto', sans-serif;
    line-height: 1.6;
 }
@@ -28,7 +28,7 @@ header {
    justify-content: center;
    align-items: center;
    text-align: center;
-   background: linear-gradient(#4a8c4a, #7ed957); /* Verde escuro para verde claro */
+   background: linear-gradient(rgb(37, 141, 77), green);
    padding: 20px;
 }
 
@@ -39,7 +39,7 @@ header > h1 {
 }
 
 body > h2 {
-   color: #2c3e50; /* Azul escuro */
+   color: black;
    font-size: clamp(2rem, 8vw, 5em);
    text-align: center;
    margin: 20px 0;
@@ -55,14 +55,14 @@ section {
 
 section.onion > p,
 section.potato > p {
-   color: #2c3e50; /* Azul escuro */
+   color: black;
    font-size: clamp(1.5rem, 3vw, 2em);
    font-weight: bold;
 }
 
 nav {
    padding: 10px;
-   background-color: #4a8c4a; /* Verde escuro */
+   background-color: rgb(37, 141, 77);
    text-align: center;
 }
 
@@ -77,7 +77,7 @@ nav ul li {
 }
 
 nav ul li a {
-   color: #ffffff; /* Branco para contraste */
+   color: #fff;
    text-decoration: none;
    font-size: 1.25em;
    padding: 10px 15px;
@@ -85,14 +85,14 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-   background-color: #2c3e50; /* Azul escuro */
+   background-color: #185c23;
 }
 
 img {
    max-width: 80%; 
    height: auto; 
    border-radius: 10px;
-   border: solid 3px #4a8c4a; /* Verde escuro */
+   border: solid 3px #44b156;
    margin: 20px auto; /* Margem superior e inferior para melhor espaçamento */
 }
 
@@ -103,7 +103,7 @@ img {
 }
 
 footer {
-   background-color: #2c3e50; /* Azul escuro */
+   background-color: #185f1b;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -119,7 +119,7 @@ footer a.gradient {
 }
 
 .gradient {
-   background-image: linear-gradient(to bottom, #4caf50, #a4d3a0); /* Verde claro */
+   background-image: linear-gradient(to bottom, rgb(51, 255, 0), rgb(251, 255, 0), rgb(0, 17, 255));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
