--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
    justify-content: center;
    align-items: center;
    text-align: center;
-   background: linear-gradient(#4a8c4a, #43a05a, #8ed8a1 ); /* Verde escuro e verde claro moderno */
+   background: linear-gradient(#4a8c4a, #43a05a, #53815e ); /* Verde escuro e verde claro moderno */
    padding: 20px;
 }
 
