--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
    justify-content: center;
    align-items: center;
    text-align: center;
-   background: linear-gradient(#4a8c4a,#53815e , #43a05a );
+   background: linear-gradient(#2c5a2c,#27883e , #56b96f );
    padding: 20px;
 }
 
