--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav ul li {
 }
 
 nav ul li a {
-   color: #ffffff; /* Branco para contraste */
+   color: #ffffff; 
    text-decoration: none;
    font-size: 1.25em;
    padding: 10px 15px;
@@ -85,15 +85,15 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-   background-color: #2c3e50; /* Azul escuro moderno */
+   background-color: #2c3e50; 
 }
 
 img {
    max-width: 80%; 
    height: auto; 
    border-radius: 10px;
-   border: solid 3px #4a8c4a; /* Verde escuro moderno */
-   margin: 20px auto; /* Margem superior e inferior para melhor espaçamento */
+   border: solid 3px #4a8c4a;
+   margin: 20px auto; 
 }
 
 @media (max-width: 600px) {
@@ -103,8 +103,7 @@ img {
 }
 
 footer {
-   background-color: #185f1b; /* Verde escuro do rodapé */
-   display: flex;
+   background-color: #185f1b; 
    justify-content: center;
    align-items: center;
    padding: 15px; 
