--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ section.potato > p {
 
 nav {
    padding: 10px;
-   background-color: #4a8c4a; 
+   background-color: #2c5a2c; 
    text-align: center;
 }
 
