--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ img {
 }
 
 footer {
-   background-color: #185f1b; 
+   background-color: #346934; 
    justify-content: center;
    align-items: center;
    padding: 15px; 
