--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ footer a.gradient {
 }
 
 p {
-   font-size: clamp(1.2rem, 4vw, 2.5rem); /* Diminuído o tamanho do <p> */
+   font-size: clamp(1rem, 4vw, 2.5rem); 
    font-weight: bold;
    line-height: 1.1;
    margin: 1rem 0;
