--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ section {
 section.onion > p,
 section.potato > p {
    color: #2d3436;
-   font-size: clamp(1.2rem, 3vw, 2em); /* Diminuído o tamanho do <p> */
+   font-size: clamp(1rem, 3vw, 2em); 
    font-weight: bold;
 }
 
